feat(api): manage doctor schedules
